Add log signing library, logging infrastructure and log dashboards